[tool.poetry]
name = "code_analysis"
version = "0.1.0"
description = "Analyse code"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
ipython = "^8.12.0"
mypy = "^1.2.0"

[tool.poetry.scripts]
code_analysis = "code_analysis:app.cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
